--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "ai": "^5.0.8",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.544.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.3.0-canary-5f2b5718-20251014",
+    "react-dom": "19.3.0-canary-5f2b5718-20251014",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
